<resources>
    <string name="tip_wifi_psw_error">Wi-Fi password error</string>
    <string name="str_adjust_screen">Adjust the screen image</string>
    <string name="tip_no_wifi_for_ipc">No Wi-Fi available for camera</string>
    <string name="tip_check_network">Please check the network and retry</string>
    <string name="tip_keep_same_network"><![CDATA[Please keep the mobile phone and camera staying on the same network, please wait<br> After the internet connection，indicator is<font color= \'#FF6000\'>「solid green」</font>]]></string>
    <string name="tip_setting_ipc">Now setup your IP camera</string>
    <string name="tip_choose_wifi_to_connect">Choose the Wi-Fi for camera</string>
    <string name="tip_ipc_config_complete">IPC Configuration Completed</string>
    <string name="tip_select_ipc">Select IPC to Configure</string>
    <string name="tip_choose_multi_ipc">More than one can be selected</string>
    <string name="str_quit_config">Quit</string>
    <string name="dialog_msg_timeout_retry">Connection timeout, please check the network and retry</string>
    <string name="tip_connect_ipc_fail">Unable to connect the IP camera</string>
    <string name="str_HD">HD</string>
    <string name="str_SD">SD</string>
    <string name="str_FHD">FHD</string>
    <string name="str_record_text">In recording：</string>
    <string name="str_go_home">Return to the devices page</string>
    <string name="str_retry_add">Re-add</string>
    <string name="tip_no_ipc_found">No IPC Detected</string>
    <string name="tip_check_ipc_wireless">Make sure your camera is within range of the router signal and connect your phone to the camera\'s wireless network.「SUNMI_XXXX」</string>
    <string name="tip_check_ipc_wired">Please make sure that your IPC is within the signal range of the router, and connect your phone to the same network your device connected to.</string>
    <string name="str_select_time">Choose date</string>
    <string name="tip_video_quality_fhd">Switch to Super definition</string>
    <string name="tip_video_quality_hd">Switch to high definition</string>
    <string name="tip_device_not_exist">Device not exist</string>
    <string name="tip_already_bound">Add failed, has been bound to another account</string>
    <string name="tip_device_offline">Device offline</string>
    <string name="tip_bind_timeout">Bind timeout</string>
    <string name="tip_no_play_video">No video data</string>
    <string name="loading_search_wifi">Searching Wi-Fi…</string>
    <string name="tip_delete_ipc">Are you sure to remove the ipc?</string>
    <string name="str_dialog_net_disconnected">Network disconnected, unable to delete</string>
    <string name="tip_unbind_success">Unbind successfully</string>
    <string name="tip_unbind_fail">Unbind failed</string>
    <string name="str_setting_ipc_camera">IPC Setting</string>
    <string name="ipc_setting_success">Update completed</string>
    <string name="ipc_setting_fail">Update failed</string>
    <string name="ipc_setting_open">Open</string>
    <string name="ipc_setting_close">Close</string>
    <string name="ipc_setting_name">IPC Name</string>
    <string name="ipc_setting_tip_name_length">Name cannot exceed 32 characters</string>
    <string name="ipc_setting_tip_name_empty">Name cannot be empty or blank</string>
    <string name="ipc_setting_detail">IPC Details</string>
    <string name="ipc_setting_detail_model">IPC Model</string>
    <string name="ipc_setting_detail_sn">IPC SN</string>
    <string name="ipc_setting_sound_abnormal_detection">Sound anomaly detection</string>
    <string name="ipc_setting_active_abnormal_detection">Motion Anomaly Detection</string>
    <string name="ipc_setting_detection_sensitivity">Sensitivity</string>
    <string name="ipc_setting_detection_sensitivity_low">Low</string>
    <string name="ipc_setting_detection_sensitivity_mid">Medium</string>
    <string name="ipc_setting_detection_sensitivity_high">High</string>
    <string name="ipc_setting_detection_time">Set Detection Time</string>
    <string name="ipc_setting_detection_time_custom">Customize</string>
    <string name="ipc_setting_detection_time_day">Select Days</string>
    <string name="ipc_setting_detection_time_day_all">All</string>
    <string name="ipc_setting_detection_time_day_none">None</string>
    <string name="ipc_setting_detection_time_start">Start Time</string>
    <string name="ipc_setting_detection_time_end">End Time</string>
    <string name="ipc_setting_detection_time_tomorrow">（Next day）</string>
    <string name="ipc_setting_detection_time_all_time">7/24 Automatic Detection</string>
    <string name="ipc_setting_night_vision_mode">Night vision mode</string>
    <string name="ipc_setting_night_vision_mode_auto">Automatic switching</string>
    <string name="ipc_setting_night_vision_mode_on">Always On</string>
    <string name="ipc_setting_night_vision_mode_off">Always Off</string>
    <string name="ipc_setting_state_light">Indicator</string>
    <string name="ipc_setting_rotate">Image Rotation</string>
    <string name="ipc_setting_wifi">Wi-Fi</string>
    <string name="ipc_setting_tip_wifi_discovery">Searching Wi-Fi… Please wait.</string>
    <string name="ipc_setting_tip_wifi_choose">Selecting network…</string>
    <string name="ipc_setting_dialog_wifi_progress">Connecting(%d)</string>
    <string name="ipc_setting_dialog_wifi_success">Connecting successfully</string>
    <string name="ipc_setting_dialog_wifi_pwd_error">Password incorrect</string>
    <string name="ipc_setting_dialog_wifi_pwd_error_content">Password incorrect</string>
    <string name="ipc_setting_dialog_wifi_pwd_retry">Re-enter</string>
    <string name="ipc_setting_dialog_wifi_net_error">Network anomaly</string>
    <string name="ipc_setting_dialog_wifi_net_error_content">Please check the device indicator and mobile phone network status. If the blue light is steady, the device is connected, the green light is blinking, please check the current routing network status.</string>
    <string name="ipc_setting_version_current_name">Current Version</string>
    <string name="ipc_setting_version_current">Current Version：%s</string>
    <string name="ipc_setting_version_find_new">Available New Version：%s</string>
    <string name="ipc_setting_version_get_new">Get the latest version</string>
    <string name="ipc_setting_version_no_new">The version is the latest</string>
    <string name="ipc_setting_tip_network_detection">Checking the Internet，please wait…</string>
    <string name="ipc_setting_tip_network_dismatch">The current device and the mobile phone are not under the same router.</string>
    <string name="ipc_setting_dialog_upgrade_ok">Update</string>
    <string name="str_in_later">Later</string>
    <string name="ipc_setting_dialog_upgrade_progress">Downloading…%s%%</string>
    <string name="ipc_setting_dialog_upgrade_fail">Update failed</string>
    <string name="ipc_setting_dialog_upgrade_fail_content">Download v-%s failed</string>
    <string name="ipc_setting_dialog_upgrade_success">Updated</string>
    <string name="ipc_setting_dialog_upgrade_success_content">It has been updated to the latest version.</string>
    <string name="ipc_setting_data_get_fail">Data acquisition failed</string>
    <string name="ipc_setting_check_net_refresh">Please check the Internet first and refresh the page</string>
    <string name="tip_please_select_ipc">Please select one IPC</string>
    <string name="ipc_setting_check_wireless">Wired network is being used currently. Do you want to switch to Wi-Fi? After switching, wired network will be disconnected.</string>
    <string name="ipc_setting_tip">Reminder</string>
    <string name="ipc_setting_search_wifi">Searching the Wi-Fi…</string>
    <string name="ipc_setting_degree0">0 Degree</string>
    <string name="ipc_setting_degree90">90Degree</string>
    <string name="ipc_setting_degree180">180Degree</string>
    <string name="ipc_setting_degree270">270Degree</string>
    <string name="ipc_setting_degree">%sDegree</string>
    <string name="ipc_setting_wire_net">Wired Network</string>
    <string name="ipc_recognition_tip_ok">Got It</string>
    <string name="ipc_recognition_loading">Picture adjustment…</string>
    <string name="ipc_recognition_network_error">Network incorrect, please check</string>
    <string name="ipc_recognition_tip_position">Please guide the customer to face to the IPC and stand at the right place for face recognition.</string>
    <string name="ipc_recognition_tip_zoom">Please fit the face into the facial recognition box by adjusting the size of the image and moving the box.</string>
    <string name="ipc_recognition_tip_focus">Please use manual focus if autofocus cannot achieve idea effect for facial recognition.</string>
    <string name="ipc_recognition_tip_line">Click any two points on the screen to set the threshold line into the store\n（To improve the recognition rate, the threshold line should be drawn below the door.）</string>
    <string name="ipc_recognition_line_title1">Click any point in the screen to set the initial position of the threshold line into the store.</string>
    <string name="ipc_recognition_line_title2">Click any other point in the screen to set the end point of the entry threshold line.</string>
    <string name="ipc_recognition_line_title3">Adjust the position of the threshold line.</string>
    <string name="ipc_recognition_line_tip1">Click a random dot on the screen to set the start position of the store doorsill line.\n (Please place the starting point near the doorsill position on the image to ensure the accurate recognition on the customers stepped into the store)</string>
    <string name="ipc_recognition_line_tip2">Click any other point in the screen to set the end point of the entry threshold line.\n（In order to ensure accurate identification of the number of people entering the store, try to ensure that the terminal is close to the threshold in the picture）</string>
    <string name="ipc_recognition_line_tip3">To ensure the recognition accuracy, you can move the store doorsill line you set\n or drag the ends of the doorsill line to change doorsill length.</string>
    <string name="ipc_recognition_line_start">Click to set the threshold starting point.</string>
    <string name="ipc_recognition_line_end">Click again to set the threshold line end.</string>
    <string name="ipc_recognition_line_cancel">Cancel</string>
    <string name="ipc_recognition_line_error">The current line does not meet the requirements, please re-operation.</string>
    <string name="ipc_recognition_complete">Picture adjustment completed</string>
    <string name="ipc_recognition_sd_none">This function cannot be used for no memory card has been inserted. Please insert a memory card first.</string>
    <string name="ipc_face_group_name">名称</string>
    <string name="ipc_face_group_capacity">人脸照片数量上限</string>
    <string name="ipc_face_group_threshold">移动分组规则</string>
    <string name="ipc_face_group_mark">备注</string>
    <string name="ipc_face_group_manage">管理照片</string>
    <string name="ipc_face_group_notification">进店通知</string>
    <string name="ipc_face_group_new_desc">新客分组为临时分组，未匹配的人脸数据会存放于此</string>
    <string name="ipc_setting_state_wdr">Wide Dynamic Range</string>
    <string name="str_sd_manager">Memory Card</string>
    <string name="ipc_setting_relaunch">Reboot Device</string>
    <string name="ipc_setting_right_now_reboot">Reboot Now</string>
    <string name="ipc_setting_reboot_tip">After reboot, the IPC will be online again and the settings remain the sam</string>
    <string name="str_setting_md">Off-Time Storekeeping</string>
    <string name="str_brightness">Brightness</string>
    <string name="str_contrast">Contrast</string>
    <string name="str_saturation">Vibrancy</string>
    <string name="str_focus_adjust">Focusing</string>
</resources>