<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/str_setting_ipc_camera"
        app:titleTextColor="@color/text_main" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_camera_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/ipc_setting_name"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_camera_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showDivider="top"
                app:title="@string/ipc_setting_detail"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_md"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showDivider="both"
                app:title="@string/str_setting_md"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_camera_adjust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:showDivider="both"
                app:title="@string/str_adjust_screen"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_night_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:showDivider="both"
                app:title="@string/ipc_setting_night_vision_mode"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_wdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:showDivider="both"
                app:title="@string/ipc_setting_state_wdr"
                app:type="toggle" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:showDivider="top"
                app:title="@string/ipc_setting_state_light"
                app:type="toggle" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_view_rotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showDivider="both"
                app:title="@string/ipc_setting_rotate"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_sd_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:showDivider="both"
                app:title="@string/str_sd_manager"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:endContentText="@string/ipc_setting_unknown"
                app:showDivider="both"
                app:title="@string/ipc_setting_wifi"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_ipc_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:showDivider="top"
                app:title="@string/ipc_setting_version_current_name"
                app:type="arrow" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/sil_ipc_relaunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showDivider="top"
                app:title="@string/ipc_setting_relaunch"
                app:type="arrow" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>