<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/ipc_setting_rotate"
        app:titleTextColor="@color/text_main" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_degree0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/ipc_setting_degree0"
        app:type="checked" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_degree90"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="top"
        app:title="@string/ipc_setting_degree90"
        app:type="checked" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_degree180"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="top"
        app:title="@string/ipc_setting_degree180"
        app:type="checked" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_degree270"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="top"
        app:title="@string/ipc_setting_degree270"
        app:type="checked" />

</LinearLayout>