<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/str_setting_md"
        app:titleTextColor="@color/text_main" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_voice_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="bottom"
        app:title="@string/ipc_setting_sound_abnormal_detection"
        app:type="arrow" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_active_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="bottom"
        app:title="@string/ipc_setting_active_abnormal_detection"
        app:type="arrow" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_time_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="bottom"
        app:title="@string/ipc_setting_detection_time"
        app:type="arrow" />

</LinearLayout>