<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_adjust"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_56"
    android:background="@color/black_70"
    android:orientation="horizontal"
    android:visibility="gone">

    <RadioButton
        android:id="@+id/rb_brightness"
        style="@style/ButtonAdjustVideo"
        android:drawableTop="@drawable/ic_brightness"
        android:text="@string/str_brightness" />

    <RadioButton
        android:id="@+id/rb_contrast"
        style="@style/ButtonAdjustVideo"
        android:layout_marginStart="@dimen/dp_0_5"
        android:drawableTop="@drawable/ic_contrast"
        android:text="@string/str_contrast" />

    <RadioButton
        android:id="@+id/rb_saturation"
        style="@style/ButtonAdjustVideo"
        android:layout_marginStart="@dimen/dp_0_5"
        android:drawableTop="@drawable/ic_saturation"
        android:text="@string/str_saturation" />

    <RadioButton
        android:id="@+id/rb_focus"
        style="@style/ButtonAdjustVideo"
        android:layout_marginStart="@dimen/dp_0_5"
        android:drawableTop="@drawable/ic_focus"
        android:text="@string/str_focus_adjust" />

    <ImageView
        android:id="@+id/iv_adjust_finish"
        android:layout_width="@dimen/dp_48"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_black"
        android:scaleType="center"
        android:src="@mipmap/ic_adjust_finish" />
</RadioGroup>