<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common"
    android:orientation="vertical"
    tools:context=".view.activity.setting.IpcSettingDetailActivity">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:rightText="@string/str_delete"
        app:titleText="@string/ipc_setting_detail"
        app:titleTextColor="@color/text_main" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_camera_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/ipc_setting_detail_model" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_camera_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showDivider="top"
        app:title="@string/ipc_setting_detail_sn" />

</LinearLayout>