<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/ipc_setting_detection_time"
        app:titleTextColor="@color/text_main" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_ipc_setting_days_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:leftPadding="@dimen/dp_20"
        app:leftText="@string/ipc_setting_detection_time_day"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_ipc_setting_time_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:leftPadding="@dimen/dp_20"
        app:leftText="@string/ipc_setting_detection_time_start"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_ipc_setting_time_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:leftPadding="@dimen/dp_20"
        app:leftText="@string/ipc_setting_detection_time_end"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/c_white">

        <TextView
            android:id="@+id/tv_ipc_setting_switch_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:text="@string/ipc_setting_detection_time_all_time"
            android:textColor="@color/text_main"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_ipc_setting_detection_all_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>