<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/ipc_setting_relaunch"
        app:titleTextColor="@color/text_main" />

    <LinearLayout
        android:id="@+id/ll_relaunch"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_60"
        android:background="@color/c_white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_9"
            android:text="@string/ipc_setting_right_now_reboot"
            android:textColor="@color/text_main"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/ipc_setting_reboot_tip"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>